--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "@babel/preset-env": "^7.23.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^8.0.1",
     "morgan": "~1.9.1",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
