--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,10 @@ jobs:
       - name: Run test
         run: npm test
 
-  deploy:
+  vercel-deploy:
+    name: 'Vercel Deploy'
     runs-on: ubuntu-latest
+    needs: [build]
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - name: Checkout
@@ -46,7 +48,7 @@ jobs:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-          
+
   # ploi-deploy:
   #   name: 'Ploi Deploy'
   #   runs-on: ubuntu-latest
