--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run test
         run: npm test
 
-  vercel-deploy:
+  deploy:
     name: 'Vercel Deploy'
     runs-on: ubuntu-latest
     needs: [build]
