--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,21 +19,27 @@ jobs:
 
     steps:
       - name: Checkout
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
+
       - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
+
       - name: Install dependencies
         run: npm install
+
       - name: Run test
         run: npm test
 
   deploy:
     name: 'Vercel Deploy'
+
     runs-on: ubuntu-latest
     needs: [build]
+    
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
