UPDATE: remove vercel from deployment workflow

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "exec": "npm run dev",
     "watch": [
       "server/*",
-      "public/*",
-      "views/*"
+      "public/*"
     ],
     "ignore": [
       "**/__tests__/**",
