--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "npm-run-all clean transpile",
     "server": "node ./dist-server/bin/www",
     "dev": "NODE_ENV=development npm-run-all build server",
-    "prod": "NODE_ENV=production server",
+    "prod": "NODE_ENV=production npm-run-all server",
     "transpile": "babel ./server --out-dir dist-server",
     "clean": "rimraf dist-server",
     "watch:dev": "nodemon",
