--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "start": "npm run prod",
+    "start-worker": "JOB_TYPES=emails dist-server/worker.js -w",
     "build": "npm-run-all clean transpile",
     "server": "node ./dist-server/bin/www",
     "dev": "NODE_ENV=development npm-run-all build server",
@@ -37,6 +38,8 @@
     "@babel/cli": "^7.23.0",
     "@babel/core": "^7.23.3",
     "@babel/preset-env": "^7.23.3",
+    "@hokify/agenda": "^6.3.0",
+    "agendash": "^4.0.0",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
@@ -49,10 +52,13 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
+    "install": "^0.13.0",
     "moment": "^2.29.4",
     "mongoose": "^8.0.1",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "npm": "^10.2.4",
     "npm-run-all": "^4.1.5",
     "rimraf": "^5.0.5"
   },
