--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "mongoose": "^8.0.1",
     "morgan": "~1.9.1",
     "nodemailer": "^6.9.7",
+    "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^3.0.1",
     "npm": "^10.2.4",
     "npm-run-all": "^4.1.5",
