--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "nodemon": "^3.0.1",
     "npm": "^10.2.4",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "jest": "^29.7.0"
